--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                     <input type="text" name="Name" placeholder="Your Good Name" required>
                     <input type="email" name="Email" placeholder="Email" required>
                     <textarea name="message" placeholder="Your Message" rows="6"></textarea>
+                     <div data-netlify-recaptcha="true"></div>
                     <button type="submit" class="btnCV" id="formSubmit">Submit</button>
                 </form>
             </div>
