--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
                     </div>
                     <div class="tab-contents" id="Experience">
                         <ul>
-                            <li><span>2022 - Present </span><br>Full Stack Developer at Innovatrix Technologies PVT LTD.
+                            <li><span>Present </span><br>MERN Stack Developer at Innovatrix Technologies PVT LTD.
                             </li>
-                            <li><span>2021 - 2022 </span><br>React JS Developer at NOP COMMERCE PVT LTD.</li>
-                            <li><span>2020 - 2021 </span><br>Frontend Developer at PIXACT PVT LTD.</li>
+                            <li><span>2022 - 2023 </span><br>React JS Developer at NOP COMMERCE PVT LTD.</li>
+                            <li><span>2021 - 2022 </span><br>Frontend Developer at PIXACT PVT LTD.</li>
 
                         </ul>
                     </div>
                     <div class="tab-contents" id="Education">
                         <ul>
                             <li><span>Web & App Dvelopment Course</span><br>From SMIT.</li>
-                            <li><span>Full-Stack Dvelopment Course </span><br>From Govt of Sindh.</li>
+                            <li><span>MERN-Stack Dvelopment Course </span><br>From Govt of Sindh.</li>
                             <li><span>Bachelor</span><br>From FUUAST.</li>
                             <li><span>Higher Education</span><br>From PECHS College.</li>
                         </ul>
