--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <ul>
                             <li><span>Web & App Dvelopment Course</span><br>From SMIT.</li>
                             <li><span>MERN-Stack Dvelopment Course </span><br>From Govt of Sindh.</li>
-                            <li><span>Bachelor</span><br>From FUUAST.</li>
+                            <li><span>BSCS</span><br>From FUUAST.</li>
                             <li><span>Higher Education</span><br>From PECHS College.</li>
                         </ul>
                     </div>
