work card working

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <div class="layer">
                         <p>Visit Gulban</p>
                         <a href="https://gulban.com" target="_blank" target="_blank"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                class="fa-solid text-dark fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -286,7 +286,7 @@
                     <div class="layer">
                         <p>Download Sauced</p>
                         <a href="https://apps.apple.com/us/app/sauced-app/id6737129890" target="_blank" target="_blank"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                class="fa-solid text-dark fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -295,7 +295,7 @@
                     <div class="layer">
                         <p>Visit Design Time-lapse</p>
                         <a href="https://designtimelapse.com/" target="_blank" target="_blank"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                class="fa-solid text-dark fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
