--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/icon.png">
 </head>
 
 <body>
