google site verification tag added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Hasnain - Web & App Developer | Frontend & Backend Solutions">
     <meta name="twitter:description" content="Hi, I'm Hasnain, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4">
-
+    <meta name="google-site-verification" content="UH1aNgAC2oEg0ihaoALauEktN9COfMF2EotdIYTK9cU" />
     <!-- Structured Data (JSON-LD) for Rich Results -->
     <script type="application/ld+json">
     {
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./images/icon.png">
+    
 </head>
 
 <body>
