JSON LD schema updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Hi, I'm Hasnain, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
-    <meta name="keywords" content="Hasnain, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer">
+    <!-- <meta name="keywords" content="Hasnain, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer"> -->
+    <meta name="keywords" content="SHR, SHRR, Hasnain Raza, Hasnain, MERN, MERN Developer, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer">
+
     <meta name="author" content="Hasnain Raza">
 
     <!-- Open Graph Meta Tags for Social Media Sharing -->
@@ -29,11 +31,29 @@
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4">
     <meta name="google-site-verification" content="UH1aNgAC2oEg0ihaoALauEktN9COfMF2EotdIYTK9cU" />
     <!-- Structured Data (JSON-LD) for Rich Results -->
-    <script type="application/ld+json">
+    <!-- <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Hasnain",
+      "name": "Hasnain Raza",
+      "affiliation":"Federal Urdu University of Arts, Sciences & Technology",
+      "alumniOf":"Federal Urdu University of Arts, Sciences & Technology",
+      "award":"Front-End Development from GOVT of Sindh",
+      "birthPlace":"Karachi Pakistan",
+      "gender":"Male",
+      "familyName":"Rizvi",
+      "givenName":"Hasnain",
+      "hasCertification":"MERN Stack Development",
+      "hasOccupation":"Front-End Development",
+      "jobTitle":"Mern Stack Developer",
+      "makesOffer":[
+      "Mern Stack Development",
+      "Backend Development",
+      "Mobile App Development",
+      "React JS Development",
+      "React Native Development",
+      "Cross Platform App Development",
+      ],
       "url": "https://hasnain-mern.netlify.app/",
       "image": "https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4",
       "sameAs": [
@@ -46,7 +66,61 @@
       "jobTitle": "Web and App Developer",
       "email": "mailto:hr961992@gmail.com"
     }
-    </script>
+    </script> -->
+
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Hasnain Raza",
+          "givenName": "Hasnain",
+          "familyName": "Rizvi",
+          "gender": "Male",
+          "birthPlace": "Karachi, Pakistan",
+          "affiliation": {
+            "@type": "Organization",
+            "name": "Federal Urdu University of Arts, Sciences & Technology"
+          },
+          "alumniOf": {
+            "@type": "CollegeOrUniversity",
+            "name": "Federal Urdu University of Arts, Sciences & Technology"
+          },
+          "award": "Front-End Development from Government of Sindh",
+          "hasCredential": {
+            "@type": "EducationalOccupationalCredential",
+            "credentialCategory": "Certificate",
+            "name": "MERN Stack Development"
+          },
+          "jobTitle": "MERN Stack Developer",
+          "url": "https://hasnain-mern.netlify.app/",
+          "image": "https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4",
+          "email": "hr961992@gmail.com",
+          "sameAs": [
+            "https://www.linkedin.com/in/hasnain-mern-developer",
+            "https://github.com/hasnainraza1212",
+            "https://www.upwork.com/freelancers/hasnainraza",
+            "https://www.facebook.com/hasnain.rizvi.146",
+            "https://www.instagram.com/__.hasnainraza/"
+          ],
+          "knowsAbout": [
+            "MERN Stack Development",
+            "Backend Development",
+            "Mobile App Development",
+            "React JS Development",
+            "React Native Development",
+            "Cross Platform App Development"
+          ],
+          "keywords": [
+            "SHR",
+            "SHRR",
+            "Hasnain Raza",
+            "Hasnain",
+            "MERN",
+            "MERN Developer"
+          ]
+        }
+        </script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -62,7 +136,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/icon.png">
+    <link rel="icon" href="./images/icon.png"  type="image/x-icon">
+    <link rel="canonical" href="https://hasnain-mern.netlify.app/">
     
 </head>
 
