--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/icon.png"  type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico"  type="image/x-icon">
     <link rel="canonical" href="https://hasnain-mern.netlify.app/">
     
 </head>
