3rd json schema added and change instances of hasnain to hasnain raza

--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hasnain - Web & App Developer | Frontend & Backend Solutions</title>
+    <title>Hasnain Raza - Web & App Developer | Frontend & Backend Solutions</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Hi, I'm Hasnain, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
-    <!-- <meta name="keywords" content="Hasnain, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer"> -->
-    <meta name="keywords" content="SHR, SHRR, Hasnain Raza, Hasnain, MERN, MERN Developer, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer">
+    <meta name="description" content="Hi, I'm Hasnain Raza, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
+    <!-- <meta name="keywords" content="Hasnain Raza, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer"> -->
+    <meta name="keywords" content="SHR, SHRR, Hasnain Raza, Hasnain,Hasnain Raza MERN, MERN Developer, web developer, app developer, front-end development, back-end development, MERN stack, web development, app development, freelance developer">
 
     <meta name="author" content="Hasnain Raza">
 
     <!-- Open Graph Meta Tags for Social Media Sharing -->
-    <meta property="og:title" content="Hasnain - Web & App Developer | Frontend & Backend Solutions">
-    <meta property="og:description" content="Hi, I'm Hasnain, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
+    <meta property="og:title" content="Hasnain Raza - Web & App Developer | Frontend & Backend Solutions">
+    <meta property="og:description" content="Hi, I'm Hasnain Raza, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4">
     <meta property="og:url" content="https://hasnain-mern.netlify.app/">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Hasnain - Web & App Developer | Frontend & Backend Solutions">
-    <meta name="twitter:description" content="Hi, I'm Hasnain, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
+    <meta name="twitter:title" content="Hasnain Raza - Web & App Developer | Frontend & Backend Solutions">
+    <meta name="twitter:description" content="Hi, I'm Hasnain Raza, a web and app developer specializing in front-end and back-end solutions. Contact me for professional websites and apps for your business.">
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4">
     <meta name="google-site-verification" content="UH1aNgAC2oEg0ihaoALauEktN9COfMF2EotdIYTK9cU" />
     <!-- Structured Data (JSON-LD) for Rich Results -->
+     <!-- 1st -->
     <!-- <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -68,8 +69,8 @@
     }
     </script> -->
 
-
-    <script type="application/ld+json">
+<!-- 2nd -->
+    <!-- <script type="application/ld+json">
         {
           "@context": "https://schema.org",
           "@type": "Person",
@@ -120,6 +121,57 @@
             "MERN Developer"
           ]
         }
+        </script> -->
+<!-- 3rd -->
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "Person",
+              "name": "Hasnain Raza",
+              "givenName": "Hasnain",
+              "familyName": "Raza",
+              "gender": "Male",
+              "birthPlace": "Karachi, Pakistan",
+              "affiliation": {
+                "@type": "Organization",
+                "name": "Federal Urdu University of Arts, Sciences & Technology"
+              },
+              "alumniOf": {
+                "@type": "CollegeOrUniversity",
+                "name": "Federal Urdu University of Arts, Sciences & Technology"
+              },
+              "award": "Front-End Development from Government of Sindh",
+              "hasCredential": {
+                "@type": "EducationalOccupationalCredential",
+                "credentialCategory": "Certificate",
+                "name": "MERN Stack Development"
+              },
+              "jobTitle": "MERN Stack Developer",
+              "url": "https://hasnain-mern.netlify.app/",
+              "image": "https://avatars.githubusercontent.com/u/168637160?s=400&u=16ec58858c1cb19acc82962ab569febb394d3ac8&v=4",
+              "email": "mailto:hr961992@gmail.com",
+              "sameAs": [
+                "https://www.linkedin.com/in/hasnain-mern-developer",
+                "https://github.com/hasnainraza1212",
+                "https://www.upwork.com/freelancers/hasnainraza",
+                "https://www.facebook.com/hasnain.rizvi.146",
+                "https://www.instagram.com/__.hasnainraza/"
+              ],
+              "knowsAbout": [
+                "MERN Stack Development",
+                "Backend Development",
+                "Mobile App Development",
+                "React JS Development",
+                "React Native Development",
+                "Cross Platform App Development"
+              ],
+              "keywords": [
+                "Hasnain Raza",
+                "MERN Developer",
+                "Web Developer",
+                "App Developer"
+              ]
+            }
         </script>
 
     <!-- Google Tag Manager -->
@@ -205,10 +257,10 @@
         </div>
         <div class="d-flex heroContainer gap-5 flex-lg-row  align-items-center justify-content-between flex-column container">
             <div class="header-text" data-aos="fade-right" data-aos-delay="300">
-                <h1>👋Hi, I'm <span> HASNAIN</span></h1>
+                <h1>👋Hi, I'm <span> Hasnain Raza</span></h1>
                 <p><span class="hiddenEmoji">👋👋</span> Web & App Developer</p>
             </div>
-            <img  src="images/developer1.svg" id="developerLogo" alt="Hasnain developer logo" data-aos="fade-left"  data-aos="fade-right" data-aos-delay="700">
+            <img  src="images/developer1.svg" id="developerLogo" alt="Hasnain Raza developer logo" data-aos="fade-left"  data-aos="fade-right" data-aos-delay="700">
     </div>
 
     </div>
