lazy loading added

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="container nav_link_header_section  d-lg-none">
             <div>
                 <label for="onCanvasCustom">
-                    <img width="50" height="50" id="onCanvasImg" src="./images/list.svg" alt="menu"/>
+                    <img loading="lazy" width="50" height="50" id="onCanvasImg" src="./images/list.svg" alt="menu"/>
                 </label>
                 <input type="button" id="onCanvasCustom" class="d-none" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
@@ -239,7 +239,7 @@
                         <h1><span>H</span>asnain.</h1>
                     </a>
                     <label for="offCanvasCustom">
-                        <img width="40" height="40" class="mt-2" id="" src="./images/close.svg" />
+                        <img loading="lazy" width="40" height="40" class="mt-2" id="" src="./images/close.svg" />
                     </label>
                     <input type="button" class="d-none" id="offCanvasCustom" data-bs-dismiss="offcanvas" aria-label="Close">
                 </div>
@@ -260,7 +260,7 @@
                 <h1>👋Hi, I'm <span> Hasnain Raza</span></h1>
                 <p><span class="hiddenEmoji">👋👋</span> Web & App Developer</p>
             </div>
-            <img  src="images/developer1.svg" id="developerLogo" alt="Hasnain Raza developer logo" data-aos="fade-left"  data-aos="fade-right" data-aos-delay="700">
+            <img loading="lazy"  src="images/developer1.svg" id="developerLogo" alt="Hasnain Raza developer logo" data-aos="fade-left"  data-aos="fade-right" data-aos-delay="700">
     </div>
 
     </div>
@@ -273,7 +273,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-1ABOUT">
-                    <img src="images/me.svg" alt="preson svg">
+                    <img loading="lazy" src="images/me.svg" alt="preson svg">
                 </div>
                 <div class="col-2ABOUT">
                     <h1 class="subtitle">About Me</h1>
@@ -294,22 +294,22 @@
                                 Frameworks.<br>
                                 <div class="badgeContainer">
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="200">react js <img width="18" src="./images/react.png"
+                                        data-aos-delay="200">react js <img loading="lazy" width="18" src="./images/react.png"
                                             alt="react" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="500">mui <img width="18" src="./images/mui.png"
+                                        data-aos-delay="500">mui <img loading="lazy" width="18" src="./images/mui.png"
                                             alt="mui" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="800">bootstrap <img width="18" src="./images/bootstrap.webp"
+                                        data-aos-delay="800">bootstrap <img loading="lazy" width="18" src="./images/bootstrap.webp"
                                             alt="bootstrap" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1000">tailwind css <img width="18" src="./images/tailwind.png"
+                                        data-aos-delay="1000">tailwind css <img loading="lazy" width="18" src="./images/tailwind.png"
                                             alt="tailwind" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1300">Ant Design <img width="18" src="./images/ant-design.png"
+                                        data-aos-delay="1300">Ant Design <img loading="lazy" width="18" src="./images/ant-design.png"
                                             alt="ant-design" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1500">ionic <img width="27" src="./images/ionic.png"
+                                        data-aos-delay="1500">ionic <img loading="lazy" width="27" src="./images/ionic.png"
                                             alt="ionic" /></span>
                                 </div>
                             </li>
@@ -317,25 +317,25 @@
                                 Back-End Frameworks and tools.<br>
                                 <div class="badgeContainer">
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="200">node js <img width="25"
+                                        data-aos-delay="200">node js <img loading="lazy" width="25"
                                             src="https://img.icons8.com/fluency/144/node-js.png" alt="node-js" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="500">Express js <img width="18" src="./images/express.png"
+                                        data-aos-delay="500">Express js <img loading="lazy" width="18" src="./images/express.png"
                                             alt="express" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="800">mongodb <img width="18" src="./images/leaf.png"
+                                        data-aos-delay="800">mongodb <img loading="lazy" width="18" src="./images/leaf.png"
                                             alt="mongodb" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1000">slq <img width="18" src="./images/sql.png"
+                                        data-aos-delay="1000">slq <img loading="lazy" width="18" src="./images/sql.png"
                                             alt="sql" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1300">firebase <img width="15" src="./images/firebase.png"
+                                        data-aos-delay="1300">firebase <img loading="lazy" width="15" src="./images/firebase.png"
                                             alt="firebase" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1600">cloudinary <img width="16" src="./images/cloudinary.png"
+                                        data-aos-delay="1600">cloudinary <img loading="lazy" width="16" src="./images/cloudinary.png"
                                             alt="cloudinary" /></span>
                                     <span class="badge badge-pill badge-dark" data-aos="fade-right"
-                                        data-aos-delay="1900">Passport js<img width="18" src="./images/passport.png"
+                                        data-aos-delay="1900">Passport js<img loading="lazy" width="18" src="./images/passport.png"
                                             alt="passport" /></span>
                                 </div>
                             </li>
@@ -367,7 +367,7 @@
             <h1 class="subtitle">Services</h1>
             <div class="services-list">
                 <div data-aos="fade-right" data-aos-delay="200">
-                    <img width="70" src="./images/react.png" alt="Front end" />
+                    <img loading="lazy" width="70" src="./images/react.png" alt="Front end" />
                     <h2 style="font-weight: 700;">Frontend Solutions</h2>
                     <p style="font-size: 15px;" id="experience"></p>
                 </div>
@@ -375,7 +375,7 @@
 
 
                 <div data-aos="fade-right" data-aos-delay="500">
-                    <img width="70" src="https://img.icons8.com/fluency/144/node-js.png" alt="back end" />
+                    <img loading="lazy" width="70" src="https://img.icons8.com/fluency/144/node-js.png" alt="back end" />
                     <h2 style="font-weight: 700;">Backend Solutions</h2>
                     <p style="font-size: 15px;">Transforming Ideas into robust backend code. Proficient in databases and
                         server-side logic with unlimited revisions for your satisfaction.</p>
@@ -384,7 +384,7 @@
 
 
                 <div data-aos="fade-right" data-aos-delay="800">
-                    <img width="70" style="filter: invert(100%);" src="./images/moment.png" alt="clock" />
+                    <img loading="lazy" width="70" style="filter: invert(100%);" src="./images/moment.png" alt="clock" />
                     <h2 style="font-weight: 700;">On Time Delivery</h2>
                     <p style="font-size: 15px;"> I always make sure that I develivered the work before time so that our
                         client satisfied/happier so that we can work again in future .</p>
@@ -402,7 +402,7 @@
             <h1 class="subtitle">My Work</h1>
             <div class="work-list">
                 <div class="work" data-aos="fade-right" data-aos-delay="600">
-                    <img src="images/gulban.png" alt="gulban.com">
+                    <img loading="lazy" src="images/gulban.png" alt="gulban.com">
                     <div class="layer">
                         <p>Visit Gulban</p>
                         <a href="https://gulban.com" target="_blank" target="_blank"><i
@@ -411,7 +411,7 @@
                 </div>
 
                 <div class="work" data-aos="fade-right" data-aos-delay="800">
-                    <img src="images/sauced.webp" alt="sauced app">
+                    <img loading="lazy" src="images/sauced.webp" alt="sauced app">
                     <div class="layer">
                         <p>Download Sauced</p>
                         <a href="https://apps.apple.com/us/app/sauced-app/id6737129890" target="_blank" target="_blank"><i
@@ -420,7 +420,7 @@
                 </div>
 
                 <div class="work" data-aos="fade-right" data-aos-delay="1200">
-                    <img src="images/designtimelapse.png" alt="design Time-lapse">
+                    <img loading="lazy" src="images/designtimelapse.png" alt="design Time-lapse">
                     <div class="layer">
                         <p>Visit Design Time-lapse</p>
                         <a href="https://designtimelapse.com/" target="_blank" target="_blank"><i
