--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         <a target="_blank" href="https://www.upwork.com/freelancers/hasnainraza"><i
                                 class="fa-brands fa-upwork"></i></a>
                     </div>
-                    <a href="images\Hasnain-Developer-Resume-CV.pdf" class="btnCV" download>Download Resume</a>
+                    <a href="images\Hasnain developer CV.pdf" class="btnCV" download>Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form id="myForm" action="post" name="contact" data-aos="fade-left" data-aos-delay="600"
