project catalog updated

--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
             <h1 class="subtitle">My Work</h1>
             <div class="work-list">
                 <div class="work" data-aos="fade-right" data-aos-delay="600">
-                    <img loading="lazy" src="images/gulban.png" alt="gulban.com">
+                    <img loading="lazy" src="images/safe_showings.webp" alt="Safe Showings App">
                     <div class="layer">
-                        <p>Visit Gulban</p>
-                        <a href="https://gulban.com" target="_blank" target="_blank"><i
+                        <p>Download Safe Showings</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.kiwitech.safeshowingsapp&hl=en" target="_blank" target="_blank"><i
                                 class="fa-solid text-dark fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -420,10 +420,10 @@
                 </div>
 
                 <div class="work" data-aos="fade-right" data-aos-delay="1200">
-                    <img loading="lazy" src="images/designtimelapse.png" alt="design Time-lapse">
+                    <img loading="lazy" src="images/crime_watch.webp" alt="Alberta Rural Crime Watch App">
                     <div class="layer">
-                        <p>Visit Design Time-lapse</p>
-                        <a href="https://designtimelapse.com/" target="_blank" target="_blank"><i
+                        <p>Download Crime Watch</p>
+                        <a href="https://play.google.com/store/apps/details?id=org.rcw.quasar.app&hl=en" target="_blank" target="_blank"><i
                                 class="fa-solid text-dark fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
